--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MovieApp</string>
+    <string name="trending">Trending</string>
+    <string name="popular">Popular</string>
+    <string name="now_playing">Now Playing</string>
 </resources>
